# CPP-Course

./: README.md
hw-01_bmp/: .gitignore  Makefile  README.md
hw-01_bmp/include/: bmp.h  stego.h
hw-01_bmp/src/: bmp.c  main.c  stego.c
hw-02_huffman/: .gitignore  CMakeLists.txt  README.md
hw-02_huffman/include/: InputParser.hpp  huffmanArchiver.hpp  huffmanTree.hpp  huffmanTreeNode.hpp
hw-02_huffman/samples/: result  result-d  test-4-book.txt
hw-02_huffman/samples/tests-result/Encode/: aaa-16  test-2-all_chars.txt  test-4-book.txt
hw-02_huffman/src/: huffmanSrc.cpp  main.cpp  parser.cpp
hw-02_huffman/test/: test.cpp
lab-01_makefile/: Makefile  README.md  SOLUTION.md
lab-01_makefile/include/: header.h
lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
lab-02_cstrings/: Makefile  README.md
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: .gitignore  Makefile  README.md
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: .gitignore  Makefile  README.md
lab-04_intrusive-list/include/: clist.h
lab-05_c-io/: .gitignore  Makefile  README.md
lab-06_int-vector/: .gitignore  Makefile  README.md
lab-07_matrix/: .gitignore  Makefile  README.md
lab-08_shared-ptr/: .gitignore  README.md
lab-09_figures/: .gitignore  README.md
lab-10_cppio/: .gitignore  README.md
lab-11_vector/: .gitignore  Makefile  README.md
lab-12_exceptions/: .gitignore  Makefile  README.md
lab-13_array/: .gitignore  Makefile  README.md
(+36 files in other folders)
